--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "hyeongseok-resume",
   "version": "1.0.0",
   "description": "FE developer HyeongSeok Kim's Resume",
+  "type": "module",
   "scripts": {
-    "start": "webpack serve --mode=production",
-    "dev": "webpack serve --mode=development",
-    "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -21,12 +21,6 @@
   },
   "homepage": "",
   "devDependencies": {
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.7.6",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "vite": "^5.0.8"
   }
 }
