--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "devDependencies": {
     "sass": "^1.69.5",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "pretendard": "^1.3.9"
   }
 }
