--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "pretendard": "^1.3.9"
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "pretendard": "^1.3.9",
+    "typescript": "^5.3.3"
   }
 }
