Modify : yml 파일에 secret 키 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,3 +31,4 @@ jobs:
         with:
           branch: gh-pages # 배포될 브랜치
           folder: dist # 빌드된 파일이 위치한 폴더
+          token: ${{ secrets.MY_PERSONAL_TOKEN }}
