--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "18" # 또는 원하는 노드 버전
+          node-version: "20" # 또는 원하는 노드 버전
 
       - name: Install Dependencies
         run: npm install
@@ -30,5 +30,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages # 배포될 브랜치
-          folder: "."
+          folder: "dist"
           token: ${{ secrets.MY_PERSONAL_TOKEN }}
